--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-cli": "^8.3.1"
   },
   "scripts": {
+    "watch:sass": "node-sass assets/scss/main.scss assets/css/style.css -w",
     "compile:sass": "node-sass assets/scss/main.scss assets/css/style.comp.css",
     "concat:css": "concat -o assets/css/style.concat.css assets/font/font.css assets/css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 1 version' assets/css/style.concat.css -o assets/css/style.prefix.css",
